# pdbfixer

./: CONTRIBUTING.md  LICENSE  Manual.html  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CD.yml  CI.yml  DOC.yml  docs.yml  publish-pypi.yml
devtools/: createSoftForcefield.py
docs/: configuration.md  contributing.md  examples.md  index.md  installation.md  quickstart.md  reference.md  troubleshooting.md  usage.md
src/pdbfixer/: _constants.py  _types.py  ccd_definitions.py  pdbfixer.py
tests/: conftest.py  test_add_hydrogens.py  test_build_and_simulate.py  test_ccd_definitions.py  test_charge_and_solvate.py  test_cli.py  test_mutate.py  test_removechains.py
