[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pdbfixer"
version = "1.12.0"
description = "Fixes problems in PDB files"
readme = "README.md"
authors = [
  { name = "Peter Eastman" },
  { name = "Neoralab" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "openmm >= 8.2",
  "legacy-cgi",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

[project.optional-dependencies]
tests = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/neoralab/pdbfixer"
Repository = "https://github.com/neoralab/pdbfixer"

[project.scripts]
pdbfixer = "pdbfixer.pdbfixer:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdbfixer"]

[tool.setuptools.package-data]
pdbfixer = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
