[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "pdbfixer-neoralab"
dynamic = ["version"]
description = "Fixes problems in PDB files"
readme = "README.md"
authors = [
    { name = "Peter Eastman" },
    { name = "Neoralab" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pydantic>=2",
    "openmm >= 8.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
]
[project.urls]
Homepage = "https://github.com/neoralab/pdbfixer"
Repository = "https://github.com/neoralab/pdbfixer"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdbfixer"]

[tool.setuptools.package-data]
pdbfixer = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: exercises long-running, network-heavy integration scenarios",
]

[tool.versioningit]
default-version = "0.1.0"
[tool.versioningit.write]
file = "src/pdbfixer/version.py"
[tool.versioningit.format]
distance = "{base_version}"
dirty = "{base_version}"
distance-dirty = "{base_version}"
